--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,8 @@
 
+<DOCTYPE html>
+    <html lang = 'en'>
+        <head>
+            <title> Web Dec</title>
+            <h1>Hello World!</h1>
+        </head>
+    </html>
